# WorldSignal

./: .env.example  .gitignore  docker-compose.yml  init_storage.py  pyproject.toml  test_components.py  test_phase2.py
app/: config.py
app/api/: chat.py
app/db/: models.py
app/embeddings/: base.py
app/fetcher/: pipeline.py
app/llm/: base.py
app/rag/: retriever.py  vector_store.py
